--- a/src/vad_aic_launch/package.xml
+++ b/src/vad_aic_launch/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>vlm_dual_planner_launch</name>
+  <name>vad_aic_launch</name>
   <version>0.0.0</version>
   <description>Launch package for VLM dual planner integration</description>
   <maintainer email="58775300+Shin-kyoto@users.noreply.github.com">Shin-kyoto</maintainer>
